<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.titanicsend</groupId>
	<artifactId>titanicsend-parent</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Titanic's End</name>
	<description>
		Massively massive art car for Burning Man. It's an iceberg. You know,
		the one that ended the Titanic.
	</description>

	<modules>
		<module>audio-stems</module>
		<module>te-app</module>
	</modules>

	<properties>
		<!-- https://stackoverflow.com/a/43103038 -->
		<maven.compiler.release>21</maven.compiler.release>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Plugin versions -->
		<exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
		<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
		<maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
		<spotless.version>2.41.1</spotless.version>

		<!-- LX dependency versions -->
		<coremidi4j.version>1.6</coremidi4j.version>
		<gson.version>2.10.1</gson.version>
		<jogamp.version>2.4.0-rc-20230123</jogamp.version>
		<lx.version>1.1.1-TE.3.GPU-SNAPSHOT</lx.version>

		<!-- Project dependency versions -->
		<gigglepixel.version>0.0.3</gigglepixel.version>
		<gov-nist-math-jama.version>1.1.1</gov-nist-math-jama.version>
		<junit-jupiter.version>5.9.2</junit-jupiter.version>
		<supermod.version>0.1.5-SNAPSHOT</supermod.version>
		<beyond-plugin.version>0.1.5</beyond-plugin.version>
	</properties>

	<!-- Define a local repository -->
	<repositories>
		<repository>
			<id>project-repo</id>
			<name>project-repo</name>
			<!-- Important: using `maven.multiModuleProjectDirectory` here rather than `project.basedir` because
				 this configuration is inherited by child poms, which resolve `project.basedir` to their sub-dirs
				 rather than to the project root dir. `maven.multiModuleProjectDirectory` requires mvn 3.3.1+. -->
			<url>file://${maven.multiModuleProjectDirectory}/repo</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</snapshots>
		</repository>

		<repository>
			<id>jogamp-repo</id>
			<name>jogamp-repo</name>
			<url>https://jogamp.org/deployment/maven/</url>
			<layout>default</layout>
		</repository>
	</repositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<compilerArgs>
							<arg>-Xlint:-this-escape</arg>
							<arg>-Xpkginfo:always</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>${maven-enforcer-plugin.version}</version>
					<executions>
						<execution>
							<id>enforce-maven</id>
							<goals>
								<goal>enforce</goal>
							</goals>
							<configuration>
								<rules>
									<requireMavenVersion>
										<version>3.3.1</version> <!-- Specify your minimum Maven version here -->
										<message>Maven version 3.3.1 or higher is required to use
											${maven.multiModuleProjectDirectory} property
										</message>
									</requireMavenVersion>
								</rules>
								<fail>true</fail>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.diffplug.spotless</groupId>
					<artifactId>spotless-maven-plugin</artifactId>
					<version>${spotless.version}</version>
					<configuration>
						<java>
							<googleJavaFormat>
								<style>GOOGLE</style>
							</googleJavaFormat>
						</java>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>

			<dependency>
				<groupId>com.heronarts</groupId>
				<artifactId>lx</artifactId>
				<version>${lx.version}</version>
			</dependency>

			<dependency>
				<groupId>com.heronarts</groupId>
				<artifactId>glxstudio</artifactId>
				<version>${lx.version}</version>
			</dependency>

			<dependency>
				<groupId>com.heronarts</groupId>
				<artifactId>glx</artifactId>
				<version>${lx.version}</version>
			</dependency>

			<dependency>
				<groupId>gov.nist.math.jama</groupId>
				<artifactId>gov.nist.math.jama</artifactId>
				<version>${gov-nist-math-jama.version}</version>
			</dependency>

			<dependency>
				<groupId>org.playasystems</groupId>
				<artifactId>gigglepixel</artifactId>
				<version>${gigglepixel.version}</version>
			</dependency>

			<dependency>
				<groupId>uk.co.xfactory-librarians</groupId>
				<artifactId>coremidi4j</artifactId>
				<version>${coremidi4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openjdk.nashorn</groupId>
				<artifactId>nashorn-core</artifactId>
				<version>15.4</version>
			</dependency>

			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>javacv-platform</artifactId>
				<version>1.5.7</version>
			</dependency>

			<dependency>
				<groupId>org.jogamp.gluegen</groupId>
				<artifactId>gluegen-rt-main</artifactId>
				<version>${jogamp.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jogamp.jogl</groupId>
				<artifactId>jogl-all-main</artifactId>
				<version>${jogamp.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.4</version>
			</dependency>

			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>1.17.1</version>
			</dependency>

			<dependency>
				<groupId>me.walkerknapp</groupId>
				<artifactId>devolay</artifactId>
				<version>2.1.0-te</version>
			</dependency>

			<dependency>
				<groupId>studio.jkb</groupId>
				<artifactId>beyond</artifactId>
				<version>${beyond-plugin.version}</version>
				<exclusions>
					<exclusion>
						<groupId>com.heronarts</groupId>
						<artifactId>lx</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.heronarts</groupId>
						<artifactId>glx</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.heronarts</groupId>
						<artifactId>glxstudio</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>studio.jkb</groupId>
				<artifactId>supermod</artifactId>
				<version>${supermod.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
